# helloqt

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: compiler_settings.cmake
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  demowidget.cpp  demowidget.h  demowidget.ui
tests/: CMakeLists.txt
tests/widgets/: CMakeLists.txt  demowidgettest.cpp  main.cpp
